--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
 <meta charset="utf-8"/>
 <title>Purchase Request Form</title>
+    <link rel="icon" type="image/png" href="favicon.png">
 <style>
     body {
       font-family: Arial, sans-serif;
