--- a/index.html
+++ b/index.html
@@ -1,91 +1,11 @@
-
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
 <title>Purchase Request Form</title>
     <link rel="icon" type="image/png" href="favicon.png">
-<style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #004d40, #607d8b);
-      padding: 40px;
-      color: #ffffff;
-    }
-    .form-wrapper {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 30px;
-      border-radius: 12px;
-      max-width: 900px;
-      margin: auto;
-      box-shadow: 0 5px 25px rgba(0,0,0,0.3);
-    }
-    h1, h2 {
-      color: #ffffff;
-      border-bottom: 1px solid #ffffff33;
-      padding-bottom: 5px;
-      margin-top: 30px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 15px;
-    }
-    td {
-      padding: 8px;
-      vertical-align: top;
-    }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-bottom: 5px;
-      color: #ffffff;
-    }
-    input, textarea {
-      width: 95%;
-      padding: 8px;
-      border-radius: 6px;
-      border: 1px solid #ffffff44;
-      font-size: 1rem;
-      background-color: #2e3d3d;
-      color: #ffffff;
-    }
-    textarea {
-      resize: vertical;
-    }
-    input[readonly] {
-      background-color: #374b4b;
-      color: #b5ffbe;
-    }
-    button {
-      background-color: #388e3c;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 6px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-    button:hover {
-      background-color: #4caf50;
-    }
-    #status {
-      margin-top: 10px;
-      font-style: italic;
-    }
-  </style>
-<style>
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-input[type=number] {
-  -moz-appearance: textfield;
-}
-</style></head>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
 <div class="form-wrapper">
 <h1>Purchase Request Form</h1>
@@ -156,65 +76,45 @@ input[type=number] {
 <textarea name="vendor_reason" required="" rows="3"></textarea>
 </td>
 </tr>
+<tr>
+<td colspan="2">
+<label>Concern Department *</label>
+<input name="concern_department" required="" type="text"/>
+</td>
+</tr>
 </table>
 <button type="submit">Submit Request</button>
 <p id="status"></p>
 </form>
 </div>
+<script src="script.js"></script>
 <script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycbw2iQJNxZuqxU3lSOUKFkWiiftkH7GgF3lWdfLRjf4BNkSe_WTuDNcF7Pq_RE3nQdF53A/exec';
-  const form = document.getElementById('purchase-form');
-  const status = document.getElementById('status');
-
-  form.addEventListener('submit', function(e) {
-    e.preventDefault();
-    const formData = new FormData(form);
-    const data = Object.fromEntries(formData.entries());
-
-    fetch(scriptURL, {
-      method: 'POST',
-      body: JSON.stringify(data)
-    })
-    .then(response => response.json())
-    .then(data => {
-      if (data.result === "success") {
-        status.innerText = "Request submitted successfully!";
-        form.reset();
-      } else {
-        status.innerText = "Something went wrong.";
-      }
-    })
-    .catch(error => {
-      status.innerText = "Error: " + error.message;
-    });
-  });
-</script>
-<script>
-  document.addEventListener("DOMContentLoaded", function() {
-    // Try to use Google identity API or fallback
-    const emailField = document.getElementById("user-email");
-    try {
-      google.accounts.id.initialize({
-        client_id: "YOUR_GOOGLE_CLIENT_ID",
-        callback: (response) => {
-          const decoded = JSON.parse(atob(response.credential.split('.')[1]));
-          emailField.value = decoded.email;
+    document.addEventListener("DOMContentLoaded", function() {
+        // Try to use Google identity API or fallback
+        const emailField = document.getElementById("user-email");
+        try {
+            google.accounts.id.initialize({
+                client_id: "YOUR_GOOGLE_CLIENT_ID",
+                callback: (response) => {
+                    const decoded = JSON.parse(atob(response.credential.split('.')[1]));
+                    emailField.value = decoded.email;
+                }
+            });
+            google.accounts.id.prompt();
+        } catch (e) {
+            emailField.placeholder = "Enter email manually if not autofilled.";
         }
-      });
-      google.accounts.id.prompt();
-    } catch (e) {
-      emailField.placeholder = "Enter email manually if not autofilled.";
-    }
-  });
+    });
 </script>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
-  const mobileInput = document.querySelector("input[name='mobile']");
-  mobileInput.addEventListener("input", function() {
-    if (this.value.length > 10) {
-      this.value = this.value.slice(0, 10);
-    }
-  });
+    const mobileInput = document.querySelector("input[name='mobile']");
+    mobileInput.addEventListener("input", function() {
+        if (this.value.length > 10) {
+            this.value = this.value.slice(0, 10);
+        }
+    });
 });
-</script></body>
+</script>
+</body>
 </html>
