--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         }
 
         // Fetch department and concern department data
-        const scriptURL = 'YOUR_SCRIPT_URL/exec'; // Make sure this is correct
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbyM_c5ZUde5AIfu6y5nFKVWHfyaayeHLyiC0p9eUy6PkjBhwbu1DZ_nY3VTfUCTJeu8/exec'; // Make sure this is correct
         fetch(scriptURL + '?action=getDropdownData')
             .then(response => response.json())
             .then(data => {
