--- a/Dashboard.html
+++ b/Dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navigation Sidebar</title>
-    <link rel="stylesheet" href="sidebar.css">
+    <link rel="stylesheet" href="Dashboard Sidebar.css">
 </head>
 <body>
     <div class="container">
@@ -43,6 +43,6 @@
             <p>This is the dashboard content.</p>
         </div>
     </div>
-    <script src="sidebar.js"></script>
+    <script src="Dashboard Sidebar.js"></script>
 </body>
 </html>
