--- a/dashboard.html
+++ b/dashboard.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigation Sidebar</title>
+    <title>Staff Portal</title>
     <link rel="stylesheet" href="dashboardsidebar.css">
 </head>
 <body>
+    <h1>MOUNT ZION MEDICAL COLLEGE</h1>
+    <p style="text-align: center; color: #999;">Staff Portal</p>
     <div class="container">
         <div class="sidebar">
             <div class="toggle-button">☰</div>
