--- a/dashboard.html
+++ b/dashboard.html
@@ -6,24 +6,35 @@
   <title>Staff Portal - Dashboard</title>
   <link rel="stylesheet" href="dashboardsidebar.css" />
   <style>
-    /* Header styles */
-    .site-header h1 {
-      font-size: 24px;
+    /* Additional layout fixes */
+    body, html {
       margin: 0;
-      padding-top: 10px;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+    }
+
+    .site-header {
+      background-color: #004d00;
+      color: white;
+      padding: 15px 0 5px;
       text-align: center;
-      color: #1b5e20;
+    }
+
+    .site-header h1 {
+      font-size: 26px;
+      margin: 0;
+      line-height: 1.2;
     }
 
     .site-header p {
-      text-align: center;
-      color: #777;
-      margin: 0 0 10px;
+      margin: 0;
+      font-size: 14px;
+      color: #ccc;
     }
 
-    /* Dashboard header (user info & logout) */
     .dashboard-header {
-      background-color: #f0f0f0;
+      background-color: #e0e0e0;
       padding: 10px 20px;
       display: flex;
       justify-content: flex-end;
@@ -31,24 +42,20 @@
       border-bottom: 1px solid #ccc;
     }
 
-    .user-info {
-      margin-right: 20px;
-      font-size: 0.9em;
-      color: #555;
+    .container {
+      display: flex;
+      margin-top: 10px;
     }
 
-    .logout-button {
-      background-color: #d32f2f;
-      color: white;
-      border: none;
-      padding: 8px 15px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 0.9em;
+    .content {
+      flex: 1;
+      padding: 20px;
+      background-color: #f5f5f5;
+      min-height: calc(100vh - 130px); /* Adjust height minus header and dashboard-header */
     }
 
-    .logout-button:hover {
-      background-color: #b71c1c;
+    .toggle-button {
+      display: none; /* Show if mobile */
     }
 
     /* Overlay for mobile */
@@ -74,7 +81,7 @@
 
   <!-- USER INFO / LOGOUT -->
   <div class="dashboard-header">
-    <div class="user-info" id="user-email-display"></div>
+    <div class="user-info" id="user-email-display">staff@example.com</div>
     <button class="logout-button" id="logout-btn">Logout</button>
   </div>
 
